--- a/templates/index.html
+++ b/templates/index.html
@@ -666,7 +666,7 @@
                         </button>
                     </div>
 
-                    <!-- İSTATİSTİKLER - %94 KALDIRILDI -->
+                    <!-- İSTATİSTİKLER  KALDIRILDI -->
                     <div class="stats-container">
                         <div class="stat-item">
                             <div class="stat-number">11+</div>
